# fop-rs

./: .fopconfig  .fopconfig_uBO  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README-MAC.md  README-WIN.md  README.md  Using_FOP_with_Visual_Studio_Code.md  Why_FOP.md  fop-linux-x86_64  fop.rs  install.js  package-lock.json  package.json  parsing.md  why_fop.md
.github/workflows/: npm-publish.yml
src/: fop_checksum.rs  fop_datestamp.rs  fop_git.rs  fop_sort.rs  fop_typos.rs  main.rs  tests.rs
