[package]
name = "fop"
version = "3.9.0"
edition = "2021"
authors = ["Original: Michael (EasyList)", "Rust port"]
description = "Filter Orderer and Preener - A tool for sorting and cleaning ad-blocking filter lists"
license = "GPL-3.0"
repository = "https://github.com/easylist/easylist"
keywords = ["adblock", "easylist", "filter", "privacy"]
categories = ["command-line-utilities"]

[dependencies]
regex = "1.9"
once_cell = "1.18"
walkdir = "2.4"
rayon = "1.11"
dirs = "6.0"
ahash = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
