[package]
name = "fop"
version = "4.3.0"
edition = "2021"
authors = ["Original: Michael (EasyList)", "Rust port"]
description = "Filter Orderer and Preener - A tool for sorting and cleaning ad-blocking filter lists"
license = "GPL-3.0"
repository = "https://github.com/easylist/easylist"
keywords = ["adblock", "easylist", "filter", "privacy"]
categories = ["command-line-utilities"]

[dependencies]
regex = "1.12"
walkdir = "2.5"
rustyline = "17"
rayon = "1.11"
ahash = "0.8"
colored = "3.0"
similar = "2"
urlencoding ="2.1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
